--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,6 +13,13 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
+      - name: 'Create env file'
+        run: |
+          touch .env
+          echo REACT_APP_API_KEY=${{ secrets.REACT_APP_API_KEY }} >> .env
+          echo REACT_APP_HOST=${{ secrets.REACT_APP_HOST }} >> .env
+          cat .env
+
       - name: Login to Docker Hub
         uses: docker/login-action@v2
         with:
