--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,11 +10,12 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - name: 'Create env file'
+      - name: "Create env file"
         run: |
           touch .env
           echo REACT_APP_API_KEY=${{ secrets.REACT_APP_API_KEY }} >> .env
           echo REACT_APP_HOST=${{ secrets.REACT_APP_HOST }} >> .env
+          echo NODE_ENV=${{ secrets.NODE_ENV }} >> .env
           cat .env
 
       - name: Login to Docker Hub
