--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,9 +8,24 @@ on:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
+  build-and-push:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+
+      - name: Login to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+
+      - name: Build and Push app
+        run: |
+          docker build -t arsen00531/connect-frontend:latest .
+          docker push arsen00531/connect-frontend:latest
   build:
     # The type of runner that the job will run on
+    needs: build-and-push
     runs-on: ubuntu-latest
 
     # Steps represent a sequence of tasks that will be executed as part of the job
@@ -25,4 +40,4 @@ jobs:
         command_timeout: 20m
         script: |
           cd ~/server/connect-birga-backend/
-          make docker
+          make dockerFrontend
